--- a/OlofOchRia/OlofOchRia.csproj
+++ b/OlofOchRia/OlofOchRia.csproj
@@ -90,6 +90,8 @@
     <Content Include="js\custom.js" />
     <Content Include="js\ie10-viewport-bug-workaround.js" />
     <Content Include="js\jquery-1.11.3.min.js" />
+    <Content Include="js\jquery.countdown.js" />
+    <Content Include="js\jquery.countdown.min.js" />
     <Content Include="js\jquery.easing.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
